<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/textView_account_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_account_id"
        app:layout_constraintBottom_toTopOf="@+id/editText_account_id"
        app:layout_constraintStart_toStartOf="@+id/editText_account_id" />

    <EditText
        android:id="@+id/editText_account_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/hint_account_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_account_password"
        app:layout_constraintBottom_toTopOf="@+id/editTextText_account_password"
        app:layout_constraintStart_toStartOf="@+id/editTextText_account_password" />

    <EditText
        android:id="@+id/editTextText_account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/hint_account_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_id" />

    <ImageView
        android:id="@+id/imageView_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText_account_password"
        app:layout_constraintStart_toEndOf="@+id/editTextText_account_password"
        app:srcCompat="@drawable/ic_action_show_password"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button_save_account_info"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextText_account_password"
        app:layout_constraintStart_toStartOf="@+id/editTextText_account_password"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_account_password" />
</androidx.constraintlayout.widget.ConstraintLayout>