<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePinActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pin"
        app:layout_constraintBottom_toTopOf="@+id/editText_new_pin"
        app:layout_constraintStart_toStartOf="@+id/editText_new_pin" />

    <EditText
        android:id="@+id/editText_new_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/hint_pin"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_pin"
        app:layout_constraintBottom_toTopOf="@+id/editText_confirm_new_pin"
        app:layout_constraintStart_toStartOf="@+id/editText_confirm_new_pin" />

    <EditText
        android:id="@+id/editText_confirm_new_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/confirm_pin"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_new_pin" />

    <Button
        android:id="@+id/button_change_pin"
        android:layout_width="@dimen/button_create_pin_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_change_pin"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editText_confirm_new_pin"
        app:layout_constraintStart_toStartOf="@+id/editText_confirm_new_pin"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirm_new_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>